# QtOctave

./: CMakeLists.txt  LICENSE_GPL.txt  build.sh  clean.sh  index.html  install.sh  leeme.txt  params.json  readme.txt
easy_plot/: CMakeLists.txt  LICENSE_GPL.txt  leeme.txt  readme.txt
easy_plot/.svn/: all-wcprops  entries
easy_plot/.svn/text-base/: build.sh.svn-base  clean.sh.svn-base
easy_plot/src/: CMakeLists.txt  build.sh  clean.sh  design_main_window.ui  input.cpp  input.h  main_window.cpp  main_window.h
easy_plot/src/.svn/: all-wcprops  entries
easy_plot/src/.svn/text-base/: easy_plot.pro.svn-base  gnuplot_connection.cpp.svn-base  gnuplot_connection.h.svn-base  main.cpp.svn-base  view_angle.ui.svn-base
install_scripts/: build_installer.c  build_qtoctave_installer.txt  libs_copy.c
install_scripts/.svn/: all-wcprops  entries
install_scripts/.svn/text-base/: build_qtoctave_rpath_binary.sh.svn-base  build_xmlwidget_installer.txt.svn-base
qtjs/: instalar.txt  install.txt
qtjs/.svn/: all-wcprops  entries
qtjs/.svn/text-base/: CMakeLists.txt.svn-base  LICENSE_GPL.txt.svn-base
qtjs/doc/.svn/: all-wcprops  entries
qtjs/doc/english/: building guis with Qt Designer and qtjs.odt
qtjs/doc/espanol/: guis con Qt Designer y qtjs.odt
qtjs/qtjs/.svn/: all-wcprops  entries
qtjs/src/: main.cpp  qtjs.pro
qtjs/src/.svn/: all-wcprops  entries
qtoctave/: build.sh  clean.sh  qtoctave.nsi  qtoctave.spec.in  readme.txt
qtoctave-info-reader/: build.sh  infomainwindow.cpp  infomainwindow.h  main.cpp  parser.cpp  qtinfo.pro  webinfo.cpp
qtoctave-info-reader/.svn/: all-wcprops  entries
qtoctave-info-reader/.svn/text-base/: CMakeLists.txt.svn-base  Doxyfile.svn-base  images.qrc.svn-base  parser.h.svn-base  qtoctave-info-reader.pro.svn-base  webinfo.h.svn-base
qtoctave-info-reader/images/.svn/: all-wcprops  entries
qtoctave-info-reader/test/: octave.info-3  octave.info-5  texinfo-1.lzma  texinfo-3.lzma  time.info
qtoctave-info-reader/test/.svn/: all-wcprops  entries
qtoctave/.svn/: all-wcprops  entries
qtoctave/.svn/text-base/: CMakeLists.txt.svn-base
qtoctave/cmake-modules/.svn/: all-wcprops  entries
qtoctave/src/: autocomplete.h  basewidget.h  command_list.h  config.cpp  config.h  configure.h  configure.h.in  editor.cpp  editor.h  generate_menu.h  main.cpp  navigator.cpp  navigator.h  numberbar.cpp  numberbar.h  numberedtextview.cpp  octoutputtextedit.cpp  operations.h  pkg_bind.h  qtoctave.pro  search_dialog.h  simpleeditor.h  syntax.cpp  table.cpp  table.h  table_ui.ui  terminal.cpp  variables_list.h
qtoctave/src/.svn/: all-wcprops  entries
qtoctave/src/dynamic_help/: dynamic_help.cpp  dynamic_help.h
qtoctave/src/lang/: qtoctave.qph  qtoctave_cs.ts  qtoctave_gl_ES.ts  qtoctave_pl.ts
qtoctave/src/menus/: menus.ts
qtoctave/src/operations/: general_menu.h  general_menu.ui  operations.cpp  table_plot.h
qtoctave/src/projects/: newprojectdialog.ui
qtoctave/src/scripts/: diary.m
qtoctave/src/scripts_octave/: _ide_reload_matrix.m  _ide_reload_variables_list.m  svgcanvasload.m
qtoctave/src/svgcanvas/: export_to_dialog.ui
qtoctave_pkg/: octave-forge.list
qtoctave_pkg/.svn/: all-wcprops  entries
qtoctave_pkg/.svn/text-base/: octave-forge.xml.svn-base
qtoctave_pkg/src/: download.h  octave_bind.cpp  pkg_manager.h  qtoctave_pkg.pro
qtoctave_pkg/src/.svn/: all-wcprops  entries
simple_rcs/: CMakeLists.txt  LICENSE_GPL.txt  build.sh  clean.sh
simple_rcs/.svn/: all-wcprops  entries
simple_rcs/design/: esquema_ventana.odg
simple_rcs/design/.svn/: all-wcprops  entries
simple_rcs/design/.svn/text-base/: documentos_de_disegno.odt.svn-base  esquema_ventana.png.svn-base
simple_rcs/src/: CMakeLists.txt  add_comment.ui  add_comment_dialog.h  help_dialog.ui  main_window.ui  rcsinterfacetardiff.cpp
simple_rcs/src/.svn/: all-wcprops  entries
simple_rcs/src/.svn/text-base/: add_comment_dialog.cpp.svn-base  extract_dialog.cpp.svn-base  extract_dialog.h.svn-base  extract_dialog.ui.svn-base  main.cpp.svn-base  main.h.svn-base  rcsinterface.h.svn-base  rcsinterfacetardiff.h.svn-base
widgetserver/.svn/: all-wcprops  entries
widgetserver/.svn/text-base/: LICENSE_GPL.txt.svn-base  leeme.txt.svn-base  readme.txt.svn-base
widgetserver/doc/.svn/: all-wcprops  entries
widgetserver/doc/tutorial/: ej.ws  ej10.ws  ej11.ws  ej4.ws  ej5.ws  ej7.ws  (+2 more)
widgetserver/widgetserver/: buffer.h  ej.ws  input.cpp  input.h  menubar.cpp  window.h
xmlwidget/: CMakeLists.txt
xmlwidget/.svn/: all-wcprops  entries
xmlwidget/doc/: ej.txt  tutorial.txt  xml_widget_in octave.txt
xmlwidget/gtk2/: readme.txt
xmlwidget/qt4/: CMakeLists.txt  clean.sh  readme.txt
xmlwidget/qt4/.svn/: all-wcprops  entries
xmlwidget/qt4/.svn/text-base/: build.sh.svn-base
xmlwidget/qt4/src/: build.sh  output.h  stdin_reader.cpp  stdin_reader.h
xmlwidget/qt4/src/.svn/: all-wcprops  entries
xmlwidget/qt4/src/.svn/text-base/: CMakeLists.txt.svn-base  main.cpp.svn-base  output.cpp.svn-base  parser.cpp.svn-base  parser.h.svn-base  reader.cpp.svn-base  reader.h.svn-base  xmlhandler.cpp.svn-base  xmlhandler.h.svn-base
xmlwidget/qt4/src/widgets/: combobox.h  hbox.h  menu.cpp  scroll.cpp  scroll.h  selectfile.cpp  selectfile.h  tree.h  vseparator.h  widget.cpp  widgets.cpp  window.cpp
xmlwidget/qt4/src/widgets/.svn/: all-wcprops  entries
xmlwidget/qt4/src/widgets/.svn/text-base/: button.cpp.svn-base  button.h.svn-base  combobox.cpp.svn-base  hbox.cpp.svn-base  hseparator.cpp.svn-base  hseparator.h.svn-base  label.cpp.svn-base  label.h.svn-base  lineedit.cpp.svn-base  lineedit.h.svn-base  menu.h.svn-base  textedit.cpp.svn-base  textedit.h.svn-base  tree.cpp.svn-base  vbox.cpp.svn-base  vbox.h.svn-base  vseparator.cpp.svn-base  widget.h.svn-base  widgets.h.svn-base  window.h.svn-base
(+260 files in other folders)
